@@ -6,6 +6,7 @@
      the ssh-rand-helper program. You can force the use of ssh-rand-helper
      using the --with-rand-helper configure argument
    - Simplify and clean up ssh-rand-helper configuration
+ - (djm) Fix some bugs I introduced into ssh-rand-helper yesterday
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7153,4 +7154,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1722 2002/01/22 10:57:53 djm Exp $
+$Id: ChangeLog,v 1.1723 2002/01/22 10:58:27 djm Exp $
